# OpenTransplant

./: .gitignore  ALIAS  CNAME  CONTRIBUTING.md  OpenTransplant.opam  README.md  TECHNOLOGIES.md  docker-compose.yml  dune-project  example.html  get_provisioner_cidr.sh  organ_lifecycle.ai  terraform.tf
OpenTransplant/lib/: .merlin  constraints.ml  distance.ml  dune  matching.ml
OpenTransplant/test/: .merlin  OpenTransplant.ml  dune
assets/: OpenTransplant_Aesthetic.ai
docker/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml
documentation/: API.md
intake_mvp/: OpenTransplant_transparent.svgz  example.html  package.json
intake_mvp/public/: index.html
intake_mvp/src/: App.tsx  index.css  index.tsx  intakeFields.ts
intake_mvp/src/components/: Footer.tsx  Navbar.tsx
nginx/: Dockerfile
opentransplant/: Dockerfile  OpenTransplant.opam  build.sh  dune-project  start.sh
opentransplant/OpenTransplant/: Dockerfile
opentransplant/OpenTransplant/lib/: .merlin  constraints.ml  constraints.mli  distance.ml  dune  matching.ml  usa.ml
opentransplant/OpenTransplant/test/: .merlin  OpenTransplant.ml  dune
opentransplant/lib/: matching.ml
otapi/: .gitignore  Dockerfile  README.md  build.sh  mix.exs  start.sh
otapi/assets/: package-lock.json
otapi/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
otapi/lib/: otapi.ex  otapi_web.ex
otapi/lib/otapi/: application.ex
otapi/lib/otapi_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
static_assets/: example.html
(+28 files in other folders)
